--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -22,6 +22,38 @@
     src:local(☺), url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff') format('woff');
     src:local(☺), url('https://builtforpig.github.io/webfonts/$KROHNGOTHIC.ttf') format('truetype');
 }
+@font-face {
+    font-family: 'HanBatang';
+    font-weight: 400;    
+    font-style: normal;
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Regular.woff2') format('woff2');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Regular.woff') format('woff');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'HanBatang';
+    font-weight: 700;    
+    font-style: normal;
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Bold.woff2') format('woff2');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Bold.woff') format('woff');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Bold.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'HanBatangChe';
+    font-weight: 400;    
+    font-style: normal;
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatangChe_Regular.woff2') format('woff2');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatangChe_Regular.woff') format('woff');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatangChe_Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'HanBatangChe';
+    font-weight: 700;    
+    font-style: normal;
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatangChe_Bold.woff2') format('woff2');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatangChe_Bold.woff') format('woff');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatangChe_Bold.ttf') format('truetype');
+}
 /*
 @font-face {
     font-family: 'Ubuntu';
@@ -80,19 +112,3 @@
     src:local(☺), url('https://builtforpig.github.io/webfonts/UbuntuHangeul_Bold.woff') format('woff');
 }
 */
-@font-face {
-    font-family: 'HanBatang';
-    font-weight: 400;    
-    font-style: normal;
-    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Regular.woff2') format('woff2');
-    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Regular.woff') format('woff');
-    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Regular.ttf') format('truetype');
-}
-@font-face {
-    font-family: 'HanBatang';
-    font-weight: 700;    
-    font-style: normal;
-    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Bold.woff2') format('woff2');
-    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Bold.woff') format('woff');
-    src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Bold.ttf') format('truetype');
-}
