--- a/webfonts/DOS_Fonts.css
+++ b/webfonts/DOS_Fonts.css
@@ -1,24 +1,24 @@
 @font-face {
-    font-family: 'USOEM-CP437';
+    font-family: 'USOEM';
     font-weight: normal;    
     font-style: normal;
-    src: url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff2') format('woff2');
-    src: url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff') format('woff');
-    src: url('https://builtforpig.github.io/webfonts/CP437.ttf') format('truetype');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff2') format('woff2');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff') format('woff');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/CP437.ttf') format('truetype');
 }
 @font-face {
-    font-family: 'HBIOS-CP949';
+    font-family: 'HCODE';
     font-weight: normal;    
     font-style: normal;
-    src: url('https://builtforpig.github.io/webfonts/HBIOS_CP949.woff2') format('woff2');
-    src: url('https://builtforpig.github.io/webfonts/HBIOS_CP949.woff') format('woff');
-    src: url('https://builtforpig.github.io/webfonts/HBIOS.ttf') format('truetype');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/HBIOS_CP949.woff2') format('woff2');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/HBIOS_CP949.woff') format('woff');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/HBIOS.ttf') format('truetype');
 }
 @font-face {
-    font-family: 'ROMAN-GOTHIC';
+    font-family: 'KROHNGO';
     font-weight: normal;    
     font-style: normal;
-    src: url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff2') format('woff2');
-    src: url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff') format('woff');
-    src: url('https://builtforpig.github.io/webfonts/$KROHNGOTHIC.ttf') format('truetype');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff2') format('woff2');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff') format('woff');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/$KROHNGOTHIC.ttf') format('truetype');
 }
