--- a/webfonts/dos_fonts.css
+++ b/webfonts/dos_fonts.css
@@ -2,23 +2,23 @@
     font-family: 'USOEM';
     font-weight: normal;    
     font-style: normal;
-    src: local(☺), url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff2') format('woff2');
-    src: local(☺), url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff') format('woff');
-    src: local(☺), url('https://builtforpig.github.io/webfonts/CP437.ttf') format('truetype');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff2') format('woff2'),
+                   url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff') format('woff'),
+                   url('https://builtforpig.github.io/webfonts/CP437.ttf') format('truetype');
 }
 @font-face {
     font-family: 'HCODE';
     font-weight: normal;    
     font-style: normal;
-    src: local(☺), url('https://builtforpig.github.io/webfonts/HBIOS-CP949.woff2') format('woff2');
-    src: local(☺), url('https://builtforpig.github.io/webfonts/HBIOS-CP949.woff') format('woff');
-    src: local(☺), url('https://builtforpig.github.io/webfonts/HBIOS.ttf') format('truetype');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/HBIOS-CP949.woff2') format('woff2'),
+                   url('https://builtforpig.github.io/webfonts/HBIOS-CP949.woff') format('woff'),
+                   url('https://builtforpig.github.io/webfonts/HBIOS.ttf') format('truetype');
 }
 @font-face {
     font-family: 'KROHNGO';
     font-weight: normal;    
     font-style: normal;
-    src: local(☺), url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff2') format('woff2');
-    src: local(☺), url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff') format('woff');
-    src: local(☺), url('https://builtforpig.github.io/webfonts/$KROHNGOTHIC.ttf') format('truetype');
+    src: local(☺), url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff2') format('woff2'),
+                   url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff') format('woff'),
+                   url('https://builtforpig.github.io/webfonts/$KROHNGOTHIC.ttf') format('truetype');
 }
