--- a/webfonts/dos_fonts.css
+++ b/webfonts/dos_fonts.css
@@ -2,6 +2,7 @@
     font-family: 'USOEM';
     font-weight: normal;    
     font-style: normal;
+    font-display: block;
     src: local(☺), url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff2') format('woff2'),
                    url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff') format('woff'),
                    url('https://builtforpig.github.io/webfonts/CP437.ttf') format('truetype');
@@ -10,6 +11,7 @@
     font-family: 'HCODE';
     font-weight: normal;    
     font-style: normal;
+    font-display: block;
     src: local(☺), url('https://builtforpig.github.io/webfonts/HBIOS-CP949.woff2') format('woff2'),
                    url('https://builtforpig.github.io/webfonts/HBIOS-CP949.woff') format('woff'),
                    url('https://builtforpig.github.io/webfonts/HBIOS.ttf') format('truetype');
@@ -18,6 +20,7 @@
     font-family: 'KROHNGO';
     font-weight: normal;    
     font-style: normal;
+    font-display: block;
     src: local(☺), url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff2') format('woff2'),
                    url('https://builtforpig.github.io/webfonts/ROMAN_GOTHIC.woff') format('woff'),
                    url('https://builtforpig.github.io/webfonts/$KROHNGOTHIC.ttf') format('truetype');
