--- a/webfonts/windows_fonts.css
+++ b/webfonts/windows_fonts.css
@@ -2,6 +2,7 @@
     font-family: 'HanBatang';
     font-weight: 400;    
     font-style: normal;
+    font-display: block;
     src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Regular.woff2') format('woff2'),
                   url('https://builtforpig.github.io/webfonts/HanBatang_Regular.woff') format('woff'),
                   url('https://builtforpig.github.io/webfonts/HanBatang_Regular.ttf') format('truetype');
@@ -10,6 +11,7 @@
     font-family: 'HanBatang';
     font-weight: 700;    
     font-style: normal;
+    font-display: block;
     src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatang_Bold.woff2') format('woff2'),
                   url('https://builtforpig.github.io/webfonts/HanBatang_Bold.woff') format('woff'),
                   url('https://builtforpig.github.io/webfonts/HanBatang_Bold.ttf') format('truetype');
@@ -18,6 +20,7 @@
     font-family: 'HanBatangChe';
     font-weight: 400;    
     font-style: normal;
+    font-display: block;
     src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatangChe_Regular.woff2') format('woff2'),
                   url('https://builtforpig.github.io/webfonts/HanBatangChe_Regular.woff') format('woff'),
                   url('https://builtforpig.github.io/webfonts/HanBatangChe_Regular.ttf') format('truetype');
@@ -26,6 +29,7 @@
     font-family: 'HanBatangChe';
     font-weight: 700;    
     font-style: normal;
+    font-display: block;
     src:local(☺), url('https://builtforpig.github.io/webfonts/HanBatangChe_Bold.woff2') format('woff2'),
                   url('https://builtforpig.github.io/webfonts/HanBatangChe_Bold.woff') format('woff'),
                   url('https://builtforpig.github.io/webfonts/HanBatangChe_Bold.ttf') format('truetype');
